fix: Remove members_titles and have a *:1 relationship between members and titles
